apps/llama-cpp-worker/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llama-cpp-worker
  namespace: shikanime
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  serviceName: llama-cpp-worker
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: cache
      spec:
        resources:
          requests:
            storage: 256Gi
        storageClassName: nishir-ephemeral
        accessModes:
          - ReadWriteOncePod
    - metadata:
        name: cache-mesa
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-ephemeral
        accessModes:
          - ReadWriteOncePod
    - metadata:
        name: cache-radv
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-ephemeral
        accessModes:
          - ReadWriteOncePod
  selector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp
      app.kubernetes.io/name: llama-cpp-worker
      app.kubernetes.io/process: llama-cpp-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: llama-cpp
        app.kubernetes.io/name: llama-cpp-worker
        app.kubernetes.io/process: llama-cpp-worker
      annotations:
        k8s.v1.cni.cncf.io/networks: shikanime/llama-cpp-worker
    spec:
      securityContext:
        fsGroup: 65532
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: feature.node.kubernetes.io/pci-0380_1002.present
                    operator: In
                    values:
                      - "true"
      containers:
        - name: llama-cpp-worker
          image: llama-cpp-worker
          command:
            - ggml-rpc-server
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
          args:
            - --host
            - 0.0.0.0
            - --port
            - "50052"
            - --cache
          ports:
            - name: rpc
              containerPort: 50052
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: cache-mesa
              mountPath: /home/llama.cpp/.cache/mesa_shader_cache
            - name: cache-radv
              mountPath: /home/llama.cpp/.cache/radv_builtin_shaders
            - name: dev-kfd
              mountPath: /dev/kfd
            - name: dev-dri
              mountPath: /dev/dri
      volumes:
        - name: dev-kfd
          hostPath:
            type: CharDevice
            path: /dev/kfd
        - name: dev-dri
          hostPath:
            type: Directory
            path: /dev/dri
