apps/llama-cpp-worker/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp-worker
  namespace: shikanime
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/instance: llama-cpp
    app.kubernetes.io/name: llama-cpp-worker
  ports:
    - name: rpc
      appProtocol: shikanime.studio/ggml-rpc
      port: 50052
      targetPort: rpc
